# handbook-api

./: Cargo.toml  courses.txt  queries.txt  thoughts.md
src/: main.rs
src/api/: course.rs
