[package]
name = "handbook-api"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
ammonia = "3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.reqwest]
version = "0.11.0"
features = ["json", "blocking"]